Fixed content mixing

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=Shortz
 APP_ENV=local
 APP_KEY=base64:dh6yTnaDyj28I1O+DE4NCyWNj0IFEHuA1l2ZANrh8T0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 DB_CONNECTION=pgsql
 DB_HOST=ec2-54-243-252-232.compute-1.amazonaws.com
