--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:dh6yTnaDyj28I1O+DE4NCyWNj0IFEHuA1l2ZANrh8T0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=https://localhost
+APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
 DB_HOST=ec2-54-243-252-232.compute-1.amazonaws.com
